[package]
name = "clai"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
dirs = "4"
colored = "2"
termimad = "0.2.0"
crossterm_style = "0.3.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3